--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head></head>
 <body>
-    <link href="./nav.css" rel="stylesheet" />
+    <link href="./style.css" rel="stylesheet" />
     <header>
         <nav class="navbar">
     <ul type="none">
